--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -86,8 +86,12 @@
                                 <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="pg8-YA-YtJ">
                                     <font key="font" metaFont="system"/>
                                     <segments>
-                                        <segment width="20"/>
-                                        <segment width="114" selected="YES" tag="1"/>
+                                        <segment label="⇩" width="20">
+                                            <menu key="menu" id="FWr-XR-yCv"/>
+                                        </segment>
+                                        <segment width="114" selected="YES" tag="1">
+                                            <nil key="label"/>
+                                        </segment>
                                         <segment width="103">
                                             <nil key="label"/>
                                         </segment>
@@ -108,33 +112,8 @@
                                 <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <font key="titleFont" metaFont="system"/>
                             </box>
-                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I1K-y0-ISH">
-                                <rect key="frame" x="13" y="251" width="349" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="3Vf-6x-b9U"/>
-                                    <constraint firstAttribute="width" constant="345" id="ZBl-Vr-cHc"/>
-                                </constraints>
-                                <animations/>
-                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="oPA-OJ-ecS">
-                                    <font key="font" metaFont="system"/>
-                                    <segments>
-                                        <segment width="20">
-                                            <nil key="label"/>
-                                        </segment>
-                                        <segment width="106" selected="YES" tag="1">
-                                            <nil key="label"/>
-                                        </segment>
-                                        <segment width="107">
-                                            <nil key="label"/>
-                                        </segment>
-                                        <segment width="107">
-                                            <nil key="label"/>
-                                        </segment>
-                                    </segments>
-                                </segmentedCell>
-                            </segmentedControl>
                             <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="Jt6-rG-U8x">
-                                <rect key="frame" x="15" y="54" width="365" height="5"/>
+                                <rect key="frame" x="15" y="18" width="365" height="5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="365" id="PEc-jZ-WnX"/>
                                     <constraint firstAttribute="height" constant="1" id="zzO-hE-CcN"/>
@@ -182,7 +161,7 @@
                                 </scroller>
                             </scrollView>
                             <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sda-85-kUg">
-                                <rect key="frame" x="15" y="65" width="345" height="180"/>
+                                <rect key="frame" x="15" y="29" width="345" height="180"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="zbM-Zk-SR6">
                                     <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -218,27 +197,103 @@
                                     <animations/>
                                 </scroller>
                             </scrollView>
+                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I1K-y0-ISH">
+                                <rect key="frame" x="13" y="215" width="349" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="3Vf-6x-b9U"/>
+                                    <constraint firstAttribute="width" constant="345" id="ZBl-Vr-cHc"/>
+                                </constraints>
+                                <animations/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="oPA-OJ-ecS">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment label="⇩" width="20">
+                                            <menu key="menu" id="b9s-LG-T2S"/>
+                                        </segment>
+                                        <segment width="106" selected="YES" tag="1">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="107">
+                                            <nil key="label"/>
+                                        </segment>
+                                        <segment width="107">
+                                            <nil key="label"/>
+                                        </segment>
+                                    </segments>
+                                </segmentedCell>
+                                <connections>
+                                    <action selector="targetTabClick:" target="XfG-lQ-9wD" id="3yI-kH-pTJ"/>
+                                </connections>
+                            </segmentedControl>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="csf-jN-tGZ">
+                                <rect key="frame" x="168" y="246" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="9rf-sg-mm4"/>
+                                    <constraint firstAttribute="height" constant="45" id="Ujb-lm-U6f"/>
+                                </constraints>
+                                <animations/>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="SwapButtonIcon" imagePosition="only" alignment="center" imageScaling="axesIndependently" inset="2" id="Lm9-Pe-hHX">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="swapButton:" target="XfG-lQ-9wD" id="mkY-Ux-GE6"/>
+                                </connections>
+                            </button>
+                            <button translatesAutoresizingMaskIntoConstraints="NO" id="2dr-Xe-duZ">
+                                <rect key="frame" x="330" y="458" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="LmN-LY-Gr5"/>
+                                    <constraint firstAttribute="height" constant="30" id="dbW-l8-FlJ"/>
+                                </constraints>
+                                <animations/>
+                                <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="ClearButtonIcon" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Ke9-oh-dtx">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="clearText:" target="XfG-lQ-9wD" id="3Me-Hx-kS2"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="2dr-Xe-duZ" firstAttribute="top" secondItem="pqW-la-yHh" secondAttribute="bottom" constant="8" id="0pA-aD-84P"/>
                             <constraint firstItem="RjJ-ix-sDr" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="G8O-iw-LGa"/>
                             <constraint firstItem="Jt6-rG-U8x" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="GPk-30-8zq"/>
-                            <constraint firstItem="I1K-y0-ISH" firstAttribute="top" secondItem="RjJ-ix-sDr" secondAttribute="bottom" constant="25" id="H5N-1E-Ju0"/>
                             <constraint firstItem="RjJ-ix-sDr" firstAttribute="top" secondItem="0NE-Nv-hS7" secondAttribute="bottom" constant="8" id="JG4-HZ-kQa"/>
                             <constraint firstItem="I1K-y0-ISH" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="OVi-fG-oev"/>
+                            <constraint firstItem="csf-jN-tGZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="168" id="YBz-eb-Pbg"/>
+                            <constraint firstItem="I1K-y0-ISH" firstAttribute="top" secondItem="csf-jN-tGZ" secondAttribute="bottom" constant="8" id="a8Y-Vv-NoK"/>
                             <constraint firstItem="0NE-Nv-hS7" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="eVN-r1-7I5"/>
                             <constraint firstItem="0NE-Nv-hS7" firstAttribute="top" secondItem="pqW-la-yHh" secondAttribute="bottom" constant="8" id="icV-2G-dQg"/>
                             <constraint firstItem="Jt6-rG-U8x" firstAttribute="top" secondItem="Sda-85-kUg" secondAttribute="bottom" constant="8" id="kOb-U9-ePW"/>
+                            <constraint firstItem="2dr-Xe-duZ" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="330" id="kPX-8h-Q1U"/>
                             <constraint firstItem="pqW-la-yHh" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="nXa-2a-0a1"/>
                             <constraint firstItem="pqW-la-yHh" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="53" id="tle-8k-OXa"/>
+                            <constraint firstItem="csf-jN-tGZ" firstAttribute="top" secondItem="RjJ-ix-sDr" secondAttribute="bottom" constant="8" id="u6c-Be-GC6"/>
                             <constraint firstItem="Sda-85-kUg" firstAttribute="top" secondItem="I1K-y0-ISH" secondAttribute="bottom" constant="8" id="u9g-SJ-qdg"/>
                             <constraint firstItem="Sda-85-kUg" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="uUq-rT-aiV"/>
                         </constraints>
                         <animations/>
                     </view>
+                    <connections>
+                        <outlet property="clearTextButton" destination="2dr-Xe-duZ" id="oZu-m2-egP"/>
+                        <outlet property="inputField" destination="0NE-Nv-hS7" id="mpa-iB-ilg"/>
+                        <outlet property="inputText" destination="Krm-dc-d3y" id="xFJ-rw-zHf"/>
+                        <outlet property="outputField" destination="Sda-85-kUg" id="gpr-AP-Hha"/>
+                        <outlet property="outputText" destination="nWD-sP-g1K" id="M3I-52-gYR"/>
+                        <outlet property="sourceLanguageMenu" destination="FWr-XR-yCv" id="85H-yH-m05"/>
+                        <outlet property="targetLanguageMenu" destination="b9s-LG-T2S" id="KoU-C1-hvR"/>
+                        <outlet property="targetSegmentedControl" destination="I1K-y0-ISH" id="PiD-z7-K5Z"/>
+                    </connections>
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-9" y="792"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ClearButtonIcon" width="16" height="16"/>
+        <image name="SwapButtonIcon" width="256" height="256"/>
+    </resources>
 </document>
