--- a/googleTranslateWidget/Base.lproj/Main.storyboard
+++ b/googleTranslateWidget/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <segmentedControl verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pqW-la-yHh" customClass="SeparatedButton">
-                                <rect key="frame" x="5" y="494" width="371" height="24"/>
+                                <rect key="frame" x="12" y="494" width="358" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="367" id="jc1-HQ-kjT"/>
                                     <constraint firstAttribute="height" constant="21" id="wH3-Vr-s47"/>
@@ -89,9 +89,7 @@
                                         <segment label="⇩" width="20">
                                             <menu key="menu" id="FWr-XR-yCv"/>
                                         </segment>
-                                        <segment width="114" selected="YES" tag="1">
-                                            <nil key="label"/>
-                                        </segment>
+                                        <segment label="Ⓐ &gt; (Finnish)" selected="YES" tag="1"/>
                                         <segment label="English" width="114"/>
                                         <segment label="Finnish" width="114"/>
                                     </segments>
@@ -122,13 +120,13 @@
                                 <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <font key="titleFont" metaFont="system"/>
                             </box>
-                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NE-Nv-hS7">
-                                <rect key="frame" x="15" y="308" width="345" height="180"/>
-                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="WJa-Ww-0Jw">
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sda-85-kUg">
+                                <rect key="frame" x="15" y="29" width="345" height="180"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="zbM-Zk-SR6">
                                     <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <textView drawsBackground="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="Krm-dc-d3y">
+                                        <textView drawsBackground="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="nWD-sP-g1K">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <animations/>
@@ -141,19 +139,19 @@
                                         </textView>
                                     </subviews>
                                     <animations/>
-                                    <color key="backgroundColor" red="0.96378026832460728" green="0.27716564474729971" blue="0.14291217133263687" alpha="0.80621121453900713" colorSpace="calibratedRGB"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="345" id="2J1-se-bjc"/>
-                                    <constraint firstAttribute="height" constant="180" id="Gjk-be-EVL"/>
+                                    <constraint firstAttribute="height" constant="180" id="IHX-tU-V2D"/>
+                                    <constraint firstAttribute="width" constant="345" id="KKB-yo-lGI"/>
                                 </constraints>
                                 <animations/>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="9Fr-jJ-b00">
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="Qeo-BE-pFL">
                                     <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="dQd-7T-nqK">
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="kaB-Vg-BGF">
                                     <rect key="frame" x="329" y="0.0" width="16" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
@@ -197,10 +195,10 @@
                                 </connections>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="2dr-Xe-duZ">
-                                <rect key="frame" x="330" y="458" width="30" height="30"/>
+                                <rect key="frame" x="330" y="465" width="23" height="23"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="LmN-LY-Gr5"/>
-                                    <constraint firstAttribute="height" constant="30" id="dbW-l8-FlJ"/>
+                                    <constraint firstAttribute="width" constant="23" id="LmN-LY-Gr5"/>
+                                    <constraint firstAttribute="height" constant="23" id="dbW-l8-FlJ"/>
                                 </constraints>
                                 <animations/>
                                 <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="ClearButtonIcon" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Ke9-oh-dtx">
@@ -211,13 +209,13 @@
                                     <action selector="clearText:" target="XfG-lQ-9wD" id="3Me-Hx-kS2"/>
                                 </connections>
                             </button>
-                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sda-85-kUg">
-                                <rect key="frame" x="15" y="29" width="345" height="180"/>
-                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="zbM-Zk-SR6">
+                            <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0NE-Nv-hS7">
+                                <rect key="frame" x="15" y="308" width="345" height="180"/>
+                                <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="WJa-Ww-0Jw">
                                     <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <textView drawsBackground="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="nWD-sP-g1K">
+                                        <textView drawsBackground="NO" importsGraphics="NO" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" usesFontPanel="YES" verticallyResizable="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" smartInsertDelete="YES" id="Krm-dc-d3y">
                                             <rect key="frame" x="0.0" y="0.0" width="345" height="180"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <animations/>
@@ -227,22 +225,25 @@
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <size key="minSize" width="345" height="180"/>
                                             <size key="maxSize" width="463" height="10000000"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="XfG-lQ-9wD" id="gkA-29-neD"/>
+                                            </connections>
                                         </textView>
                                     </subviews>
                                     <animations/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="0.96378026832460728" green="0.27716564474729971" blue="0.14291217133263687" alpha="0.80621121453900713" colorSpace="calibratedRGB"/>
                                 </clipView>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="180" id="IHX-tU-V2D"/>
-                                    <constraint firstAttribute="width" constant="345" id="KKB-yo-lGI"/>
+                                    <constraint firstAttribute="width" constant="345" id="2J1-se-bjc"/>
+                                    <constraint firstAttribute="height" constant="180" id="Gjk-be-EVL"/>
                                 </constraints>
                                 <animations/>
-                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="Qeo-BE-pFL">
+                                <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="9Fr-jJ-b00">
                                     <rect key="frame" x="-100" y="-100" width="87" height="18"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
                                 </scroller>
-                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="kaB-Vg-BGF">
+                                <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="dQd-7T-nqK">
                                     <rect key="frame" x="329" y="0.0" width="16" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <animations/>
